# PacMan

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  requirements.txt  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/Calc/: Calc.cpp
src/Client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
src/Client/Client/: Client.h
src/Networking/: CMakeLists.txt
src/Networking/DTO/: CMakeLists.txt  GameMessages.proto
src/Networking/Services/: CMakeLists.txt  ServiceGameMessages.cpp
src/Networking/Services/Services/: ServiceGameMessages.h
src/PacMan/: CMakeLists.txt  PacManAPI.cpp  PacManAPI.h
src/PacMan/API/: CMakeLists.txt  PacManAPI.cpp
src/PacMan/GameEvents/: BasicGameEventsPublishers.cpp  CMakeLists.txt  GameEventsManager.cpp
src/PacMan/GameEvents/GameEvents/: BaseEvents.h  ClientUIEvents.h  EntityEvents.h  GameEvents.h  GameSessionEvents.h
src/PacMan/GameEvents/GameEventsManager/: BasicGameEventsPublishers.h  GameEventsManager.h
src/PacMan/GameLogic/: CMakeLists.txt  GameHandler.cpp  GameRunner.cpp  GameSession.cpp  GameUpdate.cpp
src/PacMan/GameLogic/GameEvents/: ConnectionEvent.h  GameEvent.h  Messages.h
src/PacMan/GameLogic/GameLogic/: GameHandler.h  GameRunner.h  GameSession.h  GameSessionStatus.h  GameStatus.h  PlayerSessionInfo.h
src/PacMan/GameLogic/Strategies/: AStarPathFinder.cpp  CMakeLists.txt  GhostStrategies.cpp
src/PacMan/GameLogic/Strategies/PathFinders/: AStarPathFinder.h
src/PacMan/GameLogic/Strategies/Strategies/: GhostStrategies.h
src/PacMan/GameMessages/: CMakeLists.txt  ConnectionMessageType.h  ConnectionMessages.h  GameMessageType.h  GameMessages.h  GameMessagesSerializer.cpp  GameMessagesSerializer.h  MessageType.h
src/PacMan/GameMessages/Controllers/: CMakeLists.txt  RequestResponseHandler.cpp
src/PacMan/GameMessages/Controllers/Controllers/: RequestResponseHandler.h
src/PacMan/GameMessages/GameMessages/: ConnectionMessageType.h  ConnectionMessages.h  GameMessages.h  MessageHeader.h  MessageType.h  PubSubMessages.h
src/PacMan/GameMessages/proto/: CMakeLists.txt  GameMessages.proto
src/PacMan/GameMessagesBak/GameMessages/: ConnectionMessageType.h  MessageType.h
src/PacMan/GameObjects/: Board.cpp  Board.h  CMakeLists.txt  ILevelBuilder.h  Level.cpp  Level.h  LevelBuilderFromFile.cpp  LevelBuilderFromFile.h  LevelState.h
src/PacMan/GameObjects/Entites/: Entity.cpp  Entity.h
src/PacMan/GameObjects/Entities/: CMakeLists.txt  Empty.cpp  Entity.cpp  Entity.h  EntityType.h  Food.cpp  Food.h  Ghost.cpp  Ghost.h  IEntity.h  MovingEntity.cpp  PacMan.cpp  PacMan.h  SuperFood.cpp  SuperFood.h  Wall.cpp  Wall.h
src/PacMan/GameObjects/Entities/Entities/: Empty.h  EntitiesStates.h  Entity.h  EntityType.h  Food.h  Ghost.h  (+5 more)
src/PacMan/GameObjects/GameObjects/: ILevelBuilder.h  Level.h  LevelBuilderFromFile.h
src/PacMan/Resources/: Board1.txt  CMakeLists.txt
src/PacMan/Utils/: CMakeLists.txt  ILogger.cpp  Logger.cpp
src/PacMan/Utils/Utils/: ILogger.h  Logger.h  PublishSubscribeHandlers.h  Signals.h
src/Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
src/Server/GameMessagesHandlers/: CMakeLists.txt  ReqRespHandler.cpp
src/Server/GameMessagesHandlers/GameMessagesHandlers/: ReqRespHandler.h
src/Server/Server/: Server.h
src/client/: CMakeLists.txt  ClientApp.cpp  ClientApp.hpp  Config.hpp  ProcessSpawner.cpp  ProcessSpawner.hpp  main.cpp
src/client/ScreenManagement/: CMakeLists.txt  Screen.hpp  ScreenManager.cpp  ScreenManager.hpp  ScreenRequest.hpp
src/client/ScreenManagement/screens/: CMakeLists.txt  GameScreen.cpp  GameScreen.hpp  LoadingScreen.cpp  LoadingScreen.hpp  LobbyScreen.cpp  LobbyScreen.hpp  MenuScreen.cpp  MenuScreen.hpp  ResultsScreen.cpp  ResultsScreen.hpp  ScreenFactory.cpp  ScreenFactory.hpp
src/client/app/: CMakeLists.txt  ClientApp.cpp  ClientApp.hpp  ProcessSpawner.cpp  ProcessSpawner.hpp
src/client/graphics/: AppWindow.cpp  AppWindow.hpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
src/client/input/: CMakeLists.txt  InputManager.cpp  InputManager.hpp  InputSnapshot.hpp
src/client/network/: CMakeLists.txt  ClientNetwork.cpp  ClientNetwork.hpp  ClientNetworkEventParser.cpp  ClientNetworkEventParser.hpp  ClientNetworkEvents.hpp
src/client/screen/: CMakeLists.txt  Screen.hpp  ScreenManager.cpp  ScreenManager.hpp
src/client/screens/: CMakeLists.txt  GameScreen.cpp  GameScreen.hpp  LoadingScreen.cpp  LoadingScreen.hpp  LobbyScreen.cpp  LobbyScreen.hpp  MenuScreen.cpp  MenuScreen.hpp  ResultsScreen.cpp  ResultsScreen.hpp
src/client/ui/: CMakeLists.txt  UIOverlay.cpp  UIOverlay.hpp
src/core/: CMakeLists.txt  Common.hpp  Config.hpp  ConfigUtils.hpp  Placeholder.cpp
src/core/ecs/: CMakeLists.txt  Components.hpp
src/core/ecs/systems/: CMakeLists.txt  CollisionSystem.cpp  CollisionSystem.hpp  MovementSystem.cpp  MovementSystem.hpp
src/core/maps/: CMakeLists.txt  Map.hpp  MapsManager.cpp  MapsManager.hpp
src/core/network/: CMakeLists.txt  ENetSourceProvider.cpp  ENetSourceProvider.hpp  RawNetworkMessage.hpp
src/core/protocol/: CMakeLists.txt  PacketCodec.cpp  PacketCodec.hpp  Packets.hpp  packets.fbs
src/core/simulation/: CMakeLists.txt  Simulation.cpp  Simulation.hpp
src/server/: CMakeLists.txt  Config.hpp  main.cpp
src/server/ai/: AISystem.cpp  AISystem.hpp  CMakeLists.txt  GhostBehavior.cpp  GhostBehavior.hpp  GhostPhaseTimer.cpp  GhostPhaseTimer.hpp
src/server/app/: CMakeLists.txt  ServerApp.cpp  ServerApp.hpp
src/server/game/: CMakeLists.txt  GameRunner.cpp  GameRunner.hpp  GameSettings.hpp
src/server/network/: CMakeLists.txt  NetworkEventParser.cpp  NetworkEventParser.hpp  NetworkEvents.hpp  ServerNetwork.cpp  ServerNetwork.hpp
src/server/phases/: AuthoritativeLogic.cpp  AuthoritativeLogic.hpp  CMakeLists.txt  GamePhase.cpp  GamePhase.hpp  LobbyPhase.cpp  LobbyPhase.hpp  Phase.hpp  PhaseRequest.hpp
src/server/render/: AsciiRenderer.cpp  AsciiRenderer.hpp  CMakeLists.txt
test/: CMakeLists.txt
test/src/: TestComponents.cpp  TestMapsManager.cpp  TestScreenManager.cpp  TestSimulation.cpp
(+33 files in other folders)
