find_package(glaze CONFIG REQUIRED)
find_package(Utils CONFIG REQUIRED)
find_package(SFML COMPONENTS Network Graphics Window Audio System CONFIG REQUIRED)
find_package(unofficial-enet CONFIG REQUIRED)
find_package(ImGui-SFML CONFIG REQUIRED)

add_subdirectory(input)
add_subdirectory(ScreenManagement)
add_subdirectory(graphics)
add_subdirectory(network)
add_subdirectory(app)

add_executable(PacManClient)
target_sources(PacManClient PRIVATE main.cpp)
target_link_libraries(PacManClient PRIVATE Client::App)
